# mat-llm-cli

./: .bumpversion.toml  .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: commit-messages.md  copilot-instructions.md
.github/workflows/: pytest.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/releases/: 0.0.1.md
mat_llm_cli/: __version__.py  cli.py  utils.py
