[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mat_llm_cli"
version = "0.0.1"
description = "AContains useful CLI tools s lto leverage LLM APIs."
authors = [
  { name = "Matthieu Dagommer" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mat_llm_cli"]
include = ["pyproject.toml", "mat_llm_cli/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mat_llm_cli"]
force-sort-within-sections = true

